trionyx/core/static/css/trionyx.css
.content-header-wrapper {
    z-index: 999;
    background-color: #ecf0f5;
    padding-bottom: 15px;
    border-bottom: 1px solid #ddd;
    right: 0;
    left: 230px;
    transition: left .3s ease-in-out;
}

.detail-tab-view-tabs ul.nav {
    border-top: 1px solid #ddd;
    border-bottom: 1px solid #ddd;
    margin-bottom: 15px;
    background-color: #eee;
}

/*****************************************************************************/
[v-cloak] { display: none; }

dl {
    margin-bottom: 0px;
}


#app-model-list {
    margin-top: 20px;
}

#app-model-list thead tr {
    border-top: 2px solid #f4f4f4;
}

#app-model-list tr {
    cursor: pointer;
}

#app-model-list tbody tr:hover {
    background-color: #f0f0f0;
}

